monumentus codus fixus 2 electric boogaloo

--- a/localisation/tellum_monuments_effects_l_english.yml
+++ b/localisation/tellum_monuments_effects_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 new_ideas: "New Ideas"
-new_ideas_desc: "The Great Library's influence has risen to the international stage. Many foreign teachers have come to share their wisdom."
+#new_ideas_desc: "The Great Library's influence has risen to the international stage. Many foreign teachers have come to share their wisdom."
 
 the_beauty_of_an_empire: "The Beauty of an Empire"
 the_beauty_of_an_empire_desc: "The sight of the expanded Hanging Gardens brings tears to the eyes of those who witness it. The empire's citizens are reinvigorated and awestruck by its beauty."
@@ -79,7 +79,7 @@ the_highest_philosophy: "The Highest Philosophy"
 the_highest_philosophy_desc: "We have seen the path to enlightenment. Our king will follow it dilligently."
 
 a_prosperous_market: "A Prosperous Market"
-new_ideas_desc: "Business has expanded to unseen heights. This is a momentous time for our people."
+#new_ideas_desc: "Business has expanded to unseen heights. This is a momentous time for our people."
 
 monopoly_on_minerals: "Monopoly on Minerals"
 monopoly_on_minerals_desc: "Our mine has developed a name for itself. Many raw resources from lands afar have made their way to us as well. It shouldn't be a problem if we sell them in their stead."
