--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -953,18 +953,21 @@
  harpylen_area:0 "Harpylen"
  harpylen_area_name:0 "Harpylen"
  harpylen_area_adj:0 "Harpyleni"
- frenyantlen_area:0 "Frenyantlen"
- frenyantlen_area_name:0 "Frenyantlen"
- frenyantlen_area_adj:0 "Frenyantleni"
+ crelyore_ridge_area:0 "Crelyore Ridge"
+ crelyore_ridge_area_name:0 "Crelyore Ridge"
+ crelyore_ridge_area_adj:0 "Crelyore Ridgeman"
+ kalisad_area:0 "Kališad"
+ kalisad_area_adj:0 "Kališadir"
+ kalisad_area_name:0 "Kališad"
  jorkad_lake_area:0 "Jorkad Lake"
  jorkad_lake_area_adj:0 "Jorkadian"
  jorkad_lake_area_name:0 "Jorkad Lake"
  alyzksaan_area:0 "Alyzksaan"
  alyzksaan_area_adj:0 "Alyzksaani"
  alyzksaan_area_name:0 "Alyzksaan"
- upper_gelkali_area:0 "Upper Gelkalis"
- upper_gelkali_area_adj:0 "Upper Gelkalis"
- upper_gelkali_area_name:0 "Upper Gelkar"
+ upper_gelkali_area:0 "Upper Gelkali"
+ upper_gelkali_area_adj:0 "Upper Gelkali"
+ upper_gelkali_area_name:0 "Upper Gelkali"
  gelkalis_area:0 "Gelkalis"
  gelkalis_area_adj:0 "Gelkali"
  gelkalis_area_name:0 "Gelkalis"
@@ -1061,9 +1064,6 @@
  aqatbahar_area:0 "Aqatbahar"
  aqatbahar_area_name:0 "Aqatbahar"
  aqatbahar_area_adj:0 "Aqatbaharian"
- fajabahar_area:0 "Fajabahar"
- fajabahar_area_name:0 "Fajabahar"
- fajabahar_area_adj:0 "Fajabaharian"
  bahar_szel_uak_area:0 "Bahar Szel-Uak"
  bahar_szel_uak_area_name:0 "Bahar Szel-Uak"
  bahar_szel_uak_area_adj:0 "Baharian"
@@ -1079,6 +1079,9 @@
  bulwar_area:0 "Bulwar"
  bulwar_area_name:0 "Bulwar"
  bulwar_area_adj:0 "Bulwari"
+ varamhar_area:0 "Varamhar"
+ varamhar_area_name:0 "Varamhar"
+ varamhar_area_adj:0 "Varamharian"
  avamezan_area:0 "Avamezan"
  avamezan_area_name:0 "Avamezan"
  avamezan_area_adj:0 "Avamezani"
@@ -1109,24 +1112,21 @@
  lower_brasan_area:0 "Lower Brasan"
  lower_brasan_area_name:0 "Lower Brasan"
  lower_brasan_area_adj:0 "Lower Brasani"
- medurubar_area:0 "Medurubar"
- medurubar_area_name:0 "Medurubar"
- medurubar_area_adj:0 "Medurubari"
+ outer_brasan_area:0 "Outer Brasan"
+ outer_brasan_area_name:0 "Outer Brasan"
+ outer_brasan_area_adj:0 "Outer Brasani"
  sur_mountains_area:0 "Sur Mountains"
  sur_mountains_area_name:0 "Sur Mountains"
  sur_mountains_area_adj:0 "Sur Mountainer"
- grixekyr_area_area:0 "Grixekyr"
- grixekyr_area_area_name:0 "Grixekyr"
- grixekyr_area_area_adj:0 "Grixekyrian"
- jixobix_area:0 "Jixobix"
- jixobix_area_name:0 "Jixobix"
- jixobix_area_adj:0 "Jixobixian"
- xhurgrum_area:0 "Xhurgrum"
- xhurgrum_area_name:0 "Xhurgrum"
- xhurgrum_area_adj:0 "Xhurgrumian"
+ garpix_ukraz_area:0 "Garpix Ukraz"
+ garpix_ukraz_area_name:0 "Garpix Ukraz"
+ garpix_ukraz_area_adj:0 "Garpix Ukrazian"
  garpix_tluukt_area:0 "Garpix Tluukt"
  garpix_tluukt_area_name:0 "Garpix Tluukt"
  garpix_tluukt_area_adj:0 "Garpix Tluuktian"
+ ardu_area:0 "Ardu"
+ ardu_area_name:0 "Ardu"
+ ardu_area_adj:0 "Arduan"
  eduz_vacyn_area:0 "Eduz-Vacyn"
  eduz_vacyn_area_name:0 "Eduz-Vacyn"
  eduz_vacyn_area_adj:0 "Eduz-Vacynian"
@@ -1166,6 +1166,9 @@
  elizna_area:0 "Elizna"
  elizna_area_name:0 "Elizna"
  elizna_area_adj:0 "Eliznan"
+ salahad_gate_area:0 "Salahad Gate"
+ salahad_gate_area_name:0 "Salahad Gate"
+ salahad_gate_area_adj:0 "Salahadian"
  garpix_zokka_area:0 "Garpix Zokka"
  garpix_zokka_area_name:0 "Garpix Zokka"
  garpix_zokka_area_adj:0 "Zokkan"
@@ -1199,12 +1202,15 @@
  south_naza_area:0 "South Naza"
  south_naza_area_name:0 "South Naza"
  south_naza_area_adj:0 "South Nazan"
- traz_buranun_area:0 "Traz Buranun"
- traz_buranun_area_name:0 "Traz Buranun"
- traz_buranun_area_adj:0 "Buranuni"
+ west_naza_area:0 "West Naza"
+ west_naza_area_name:0 "West Naza"
+ west_naza_area_adj:0 "West Nazan"
  east_naza_area:0 "East Naza"
  east_naza_area_name:0 "East Naza"
  east_naza_area_adj:0 "East Nazan"
+ yrkur_area:0 "Yrkur"
+ yrkur_area_name:0 "Yrkur"
+ yrkur_area_adj:0 "Yrkurian"
  verkal_gulan_area:0 "Verkal Gulan"
  verkal_gulan_area_name:0 "Verkal Gulan"
  verkal_gulan_area_adj:0 "Verkal Gulanian"
@@ -2242,6 +2248,9 @@
  nephevis_tears_area:0 "Nephevi's Tears"
  nephevis_tears_area_name:0 "Nephevi's Tears"
  nephevis_tears_area_adj:0 "Nephevi's Tears"
+ middle_suran_area:0 "Middle Suran"
+ middle_suran_area_name:0 "Middle Suran"
+ middle_suran_area_adj:0 "Middle Suran"
  harpys_gate_area:0 "Harpy's Gate"
  harpys_gate_area_name:0 "Harpy's Gate"
  harpys_gate_area_adj:0 "Harpy's Gate"
@@ -2251,6 +2260,9 @@
  far_east_salahad_area:0 "Far East Salahad"
  far_east_salahad_area_name:0 "Far East Salahad"
  far_east_salahad_area_adj:0 "Far East Salahad"
+ davharral_area:0 "Davharral"
+ davharral_area_name:0 "Davharral"
+ davharral_area_adj:0 "Davharral"
  gold_road_area:0 "Gold Road"
  gold_road_area_name:0 "Gold Road"
  gold_road_area_adj:0 "Gold Road"
