--- a/localisation/cot_rp_events_l_english.yml
+++ b/localisation/cot_rp_events_l_english.yml
@@ -8,3 +8,7 @@
  cot_rp_events.4.t:0 "End of the Civil War"
  cot_rp_events.4.d:0 "Victory! We defeated those snarky gnolls and brought the akani to finally understand gnomish superiority. Now we can put the new Irrigation System to work."
  cot_rp_events.4.a:0 "Glory to Daccasded!"
+ cot_temp_events.1:0 "Thalia of Anbenncóst"
+ cot_temp_events.1.t:0 "Thalia of Anbenncóst"
+ cot_temp_events.1.d:0 "Long description goes here."
+ cot_temp_events.1.a:0 "Marry her to Camir."
