new formables pogu?!

--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -46,3 +46,11 @@ V15_form_daccasded_desc:0 "After the drought it was clear that the Gnomes are be
 #Wex
 V18_form_wex_title:0 "Form Wex"
 V18_form_wex_desc:0 "We aren't a mere duchy anymore, we have become something greater."
+
+#Anbenrialt
+V19_form_anbenrialt_title:0 "Form Anbenrialt"
+V19_form_anbenrialt_desc:0 "Viva Bluetongues!"
+
+#NewZokka
+ V20_form_newzokka_title:0 "Form the new nation!"
+ V20_form_newzokka_desc:0 "n/a"
