--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -98,7 +98,7 @@ V07_ideas_start:0 "Aisgarder Traditions"
 V07_ideas_bonus:0 "Aisgarder Ambitions"
 V07_1:0 "Reavers no more, Traders"
 V07_1_desc:0 ""
-V07_2:0 "The Aisrod [Ice Road]"
+V07_2:0 "The Aisrod 'Ice Road'"
 V07_2_desc:0 ""
 V07_3:0 "With what little we have"
 V07_3_desc:0 ""
@@ -218,9 +218,13 @@ V09_7_desc:0 ""
  V17_ideas_start:0 "Gawedi Traditions"
  V17_ideas_bonus:0 "Gawedi Ambitions"
 
- V17:0 "Wex"
- V17_ADJ:0 "Wexonard"
- V17_ADJ2:0 "Wexonard"
- V17_ideas:0 "Wexonard Ideas"
- V17_ideas_start:0 "Wexonard Traditions"
- V17_ideas_bonus:0 "Wexonard Ambitions"
+ V18:0 "Wex"
+ V18_ADJ:0 "Wexonard"
+ V18_ADJ2:0 "Wexonard"
+ V18_ideas:0 "Wexonard Ideas"
+ V18_ideas_start:0 "Wexonard Traditions"
+ V18_ideas_bonus:0 "Wexonard Ambitions"
+
+ V19:0 "Anbenrialt"
+ V19_ADJ:0 "Moon Elven"
+ V19_ADJ2:0 "Moon Elven"
