more rp stuff? pogu

--- a/localisation/cot_rp_events_l_english.yml
+++ b/localisation/cot_rp_events_l_english.yml
@@ -12,3 +12,7 @@
  cot_admin_bias.1.t:0 "Thalia of Anbenncóst"
  cot_admin_bias.1.d:0 "Long description goes here."
  cot_admin_bias.1.a:0 "Marry her to Camir."
+ 
+ arbaran_rp.1.t:0 "Erelessan Century"
+ arbaran_rp.1.d:0 "Erelessa I, known as 'Lanceborn' - for both her parents were known and respected knights - her sharp mind, forgiving outlook and successes in many studies led to her father, Emperor Calas, to name her her instead of her brother, Erel - who became a fantastic commander. This is an opportunity, one your country needed - for the first time since Calasandur, a glorious heir follows an accomplished ruler - Do not waste this on frivolities, a babe of champions rises! nations will bow, walls will crumble, and GAWED WILL PROSPER!"
+ arbaran_rp.1.a:0 "Yusssssss"
