Locali and such

--- a/localisation/cot_formable_nations_decision_l_english.yml
+++ b/localisation/cot_formable_nations_decision_l_english.yml
@@ -52,5 +52,5 @@ V19_form_anbenrialt_title:0 "Form Anbenrialt"
 V19_form_anbenrialt_desc:0 "Viva Bluetongues!"
 
 #NewZokka
- V20_form_newzokka_title:0 "Form the new nation!"
- V20_form_newzokka_desc:0 "n/a"
+ V20_form_newzokka_title:0 "Form Graaxgazraj!"
+ V20_form_newzokka_desc:0 "TBA"
