--- a/localisation/cot_funky_shit_l_english.yml
+++ b/localisation/cot_funky_shit_l_english.yml
@@ -228,3 +228,11 @@ V09_7_desc:0 ""
  V19:0 "Anbenrialt"
  V19_ADJ:0 "Moon Elven"
  V19_ADJ2:0 "Moon Elven"
+ V18_ideas_start:0 "Moon Elven Traditions"
+ V18_ideas_bonus:0 "Moon Elven Ambitions"
+
+ V20:0 "Graaxgazraj"
+ V19_ADJ:0 "Graaxii"
+ V19_ADJ2:0 "Graaxi"
+ V18_ideas_start:0 "Graaxi Traditions"
+ V18_ideas_bonus:0 "Graaxi Ambitions"
