--- a/localisation/AshscaleMissions_l_english.yml
+++ b/localisation/AshscaleMissions_l_english.yml
@@ -45,7 +45,7 @@
  kobold_reach_desc:0 ""
  staking_claim_title:0 "Staking our Claim"
  staking_claim_desc:0 ""
- end_black_beard_title:0 "End the Cartel"
+ end_black_beard_title:0 "Deal with the Cartel"
  end_black_beard_desc:0 ""
  secure_nest_title:0 "Secure the Nest"
  secure_nest_desc:0 ""
@@ -152,7 +152,8 @@
  ash_flavour_events.8.d:0 "We carved out a good chunk of land for us inside the Serpentsreach, it is time to become a country of our own."
  ash_flavour_events.8.a:0 "Our very own Kingdom!"
  ash_flavour_events.9.t:0 "Plundering the Camp"
- ash_flavour_events.9.d:0 "After defeating the Dwarves of the Blackbeard Cartel we found maps of inhabited Holds in the Serpentsreach."
+ ash_flavour_events.9.d.1:0 "After defeating the Dwarves of the Blackbeard Cartel we found maps of inhabited Holds in the Serpentsreach."
+ ash_flavour_events.9.d.2:0 "We found an abandoned Camp of the dwarven cartel that used to expolore the region."
  ash_flavour_events.9.a:0 "These Maps will be usefull!"
  #Modifier(s)
  ash_dilemma:0 "Prepared to Fight!"
