save edits :blume:

--- a/localisation/cot_rp_rewards_l_english.yml
+++ b/localisation/cot_rp_rewards_l_english.yml
@@ -65,3 +65,6 @@
  daccasded_drought_to_end_droughts:0 "Recovering from a Drought to end all Droughts"
  daccasded_desalinated_irrigation:0 "Desalinated Irrigation"
  GWYN_NAME:0 "Segbandal"
+ mistri_adventure:0 "Mistri's Adventures"
+ cyrus_reign:0 "Cyrus' Reign"
+ talia_silgarion:0 "Tália Silgarion"
