--- a/localisation/cot_ideas_l_english.yml
+++ b/localisation/cot_ideas_l_english.yml
@@ -565,8 +565,8 @@
  mil8_4_a_desc:0 "By allowing for merit promotions to waive standard commission fees, we only further encourage our nation's leaders to study deeper the art of war."
  mil8_5_a:0 "Commander-in-Chief"
  mil8_5_a_desc:0 "Our Ruler serves as commander in chief, and must go through the same level of training as our men, gaining a deep understanding of warfare and their men, who often can be found advising the monarch in times of war.\n§JUnlocks a Decision to turn your Ruler into a Powerful General§!"
- mil8_6_a:0 ""
- mil8_6_a_desc:0 ""
+ mil8_6_a:0 "Council of War"
+ mil8_6_a_desc:0 "We have assembled a Council of War, pray we do not assemble further!"
  mil8_7_a:0 "Field Commanders"
  mil8_7_a_desc:0 "With all other steps done, our officers finally take command of the entire field, utilizing their knowledge of terrain, tactics, and their men to organize battles to their favor and thereby grasp victory." 
  ##### ADVENTURER IDEAS #####
