Vaass last minute

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -73,6 +73,16 @@
  CoT_misc.12.a:0 "I want the generic mission tree!"
  CoT_misc.12.b:0 "No, I will larp instead."
 
+ CoT_misc.21.t:0 "CoT Setup"
+ CoT_misc.21.d:0 "CoT Setup"
+ CoT_misc.21.a:0 "THIS BUTTON DOES NOTHING/LEAVE THE MENU"
+ CoT_misc.21.b:0 "40 Players"
+ CoT_misc.21.c:0 "37-39 Players"
+ CoT_misc.21.e:0 "34-36 Players"
+ CoT_misc.21.f:0 "31-33 Players"
+ CoT_misc.21.g:0 "30 Players or Less"
+ CoT_SETUP_title:0 "CoT Setup"
+
  cot_rp.95.a:0 "elf"
  cot_rp.95.b:0 "gnoll"
  cot_rp.95.c:0 "human"
