--- a/localisation/CoT_Generic_mission_modifiers_l_english.yml
+++ b/localisation/CoT_Generic_mission_modifiers_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english: 
+l_english: 
  cot_seat_of_power_1:0 "Seat of Power"
  cot_seat_of_power_2:0 "Seat of Power"
  cot_seat_of_power_3:0 "Seat of Power"
@@ -276,7 +276,7 @@
  cot_generic.27.b:0 "+3 DIP"
  cot_generic.27.c:0 "+3 MIL"
  cot_generic.27.e:0 "+1 to all Stats"
- cot_generic.28.t:0 "Choice of Education"
+ cot_generic.28.t:0 "Choic of Education"
  cot_generic.28.d:0 "Choose a Focus for your state University"
  cot_generic.28.a:0 "Administrative Focus"
  cot_generic.28.b:0 "Diplomatic Focus"
