--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  anbennarian:0 "Anbennarian"
- anbenncoster:0 "Anbenncóster"
+ anbenncoster:0 "High Damerian"
  west_damerian:0 "West Damerian"
  east_damerian:0 "East Damerian"
  pearlsedger:0 "Pearlsedger"
