Damesear province names see the cheese page does have uses

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -6178,3 +6178,13 @@
  PROV7036:0 "Reservoir"
  PROV7037:0 "Reservoir"
  PROV7038:0 "Reservoir"
+
+ # cot tellum new damesear provinces
+PROV7992:0 "Damesbite"
+PROV7993:0 "Lun ail"
+PROV7994:0 "Marionaire"
+PROV7995:0 "Eronvar"
+PROV7996:0 "Marthil"
+PROV7997:0 "Melefcost"
+PROV7998:0 "Erecen"
+PROV7999:0 "Earshore"
