--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -6075,3 +6075,13 @@
  PROV_ADJ7032:0 "Vyr Ahain"
  PROV_ADJ7033:0 "Vyr Neith"
  PROV_ADJ7034:0 "Komystaen"
+
+ # cot tellum new damesear provinces
+PROV_ADJ7992:0 "Damesbiter"
+PROV_ADJ7993:0 "Lun ailer"
+PROV_ADJ7994:0 "Marionairer"
+PROV_ADJ7995:0 "Eronvar"
+PROV_ADJ7996:0 "Marthiler"
+PROV_ADJ7997:0 "Melefcoster"
+PROV_ADJ7998:0 "Erecener"
+PROV_ADJ7999:0 "Earshorer"
