damesear loc but actually this time

--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -4294,3 +4294,14 @@
  debug_area:0 "DEBUG AREA"
  debug_area_adj:0 "AREA"
  debug_area_name:0 "DEBUG"
+
+# cot tellum new damesear provinces
+dameisles_area:0 "Dameisles"
+dameisles_area_name:0 "Dameisles"
+dameisles_area_adj:0 "Dameislander"
+central_damesear_area:0 "Central Damesear"
+central_damesear_area:0 "Central Damesear"
+central_damesear_area:0 "Central Damesear"
+starfall_area:0 "Adrail"
+starfall_area_name:0 "Adrail"
+starfall_area_adj:0 "Adrail"
