--- a/localisation/anb_regions_l_english.yml
+++ b/localisation/anb_regions_l_english.yml
@@ -526,3 +526,8 @@
  dagrinrod_group: "Dagrinrod"
  infernal_court_provinces:0 "Infernal Court Cult Provinces"
  northern_imperial_lands_group:0 "Northern Imperial Lands"
+
+# cot tellum new damesear provinces
+damesear_region:0 "Damesear"
+damesear_regionname:0 "Damesear"
+damesear_region_adj:0 "Damesearer"
