--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -6184,7 +6184,8 @@ PROV7992:0 "Damesbite"
 PROV7993:0 "Lun ail"
 PROV7994:0 "Marionaire"
 PROV7995:0 "Eronvar"
-PROV7996:0 "Marthil"
+PROV7996:0 "Garioncost"
 PROV7997:0 "Melefcost"
 PROV7998:0 "Erecen"
 PROV7999:0 "Earshore"
+PROV8000:0 "Tideharbor"
