Folly Province Rework Complete
including loc

--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -4305,3 +4305,14 @@ central_damesear_area:0 "Central Damesear"
 starfall_area:0 "Adrail"
 starfall_area_name:0 "Adrail"
 starfall_area_adj:0 "Adrail"
+
+# CoT New Folly provinces
+marshcrossing_area:0 "Marshcrossing"
+marshcrossing_area_name:0 "Marshcrossing"
+marshcrossing_area_adj:0 "Mirelurker"
+theslump_area:0 "The Slump"
+theslump_area_name:0 "The Slump"
+theslump_area_adj:0 "Mirelurker"
+lower_dreadmire_area:0 "Lower Dreadmire"
+lower_dreadmire_area_name:0 "Lower Dreadmire"
+lower_dreadmire_area_adj:0 "Mirelurker"
