--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -6189,3 +6189,15 @@ PROV7997:0 "Melefcost"
 PROV7998:0 "Erecen"
 PROV7999:0 "Earshore"
 PROV8000:0 "Tideharbor"
+
+# CoT New Folly Provinces
+PROV7991:0 "Swampsend"
+PROV7990:0 "Butchersfeld"
+PROV7989:0 "The Slump"
+PROV7988:0 "Crowsgrave"
+PROV7987:0 "Akaz Vorur"
+PROV7986:0 "Chattlepens"
+PROV7985:0 "Fireblight"
+PROV7984:0 "Fellmire"
+PROV7983:0 "Deepmire"
+PROV7982:0 "Muckwall"
