--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -6086,3 +6086,15 @@ PROV_ADJ7997:0 "Melefcoster"
 PROV_ADJ7998:0 "Erecener"
 PROV_ADJ7999:0 "Earshorer"
 PROV_ADJ8000:0 "Tideharbor"
+
+# CoT New Folly Provinces
+PROV7991:0 "Swampsender"
+PROV7990:0 "Butchersfelder"
+PROV7989:0 "Slumper"
+PROV7988:0 "Crowsgraver"
+PROV7987:0 "Akaz Voruran"
+PROV7986:0 "Chattlepenser"
+PROV7985:0 "Fireblighter"
+PROV7984:0 "Fellmiran"
+PROV7983:0 "Deepmiran"
+PROV7982:0 "Muckwaller"
