Wesdam to Lenceiande

--- a/localisation/Flavour_Istralore_A45_l_english.yml
+++ b/localisation/Flavour_Istralore_A45_l_english.yml
@@ -46,7 +46,7 @@
  A45_west_damesear_title:0 "Control the Ear"
  A45_west_damesear_desc:0 "It is of paramount importance that the Damesear be rendered compliant and safe for imperial politics. A helpful Magisterium would do wonders for stability in the region, and is our preferred choice, but we must always consider their support of Wex in the last Imperial Election, and be aware that an allied Mage's Tower may not be possible."
  A45_traitor_wesdam_title:0 "Kinslayer's Sword"
- A45_traitor_wesdam_desc:0 "Despite being led by the Silmuna dynasty, Wesdam betrayed Dameria in the Lilac Wars and fought with Lorent. The last duke of Dameria, Adénn Skylance was slain by a Erlan of Wesdam, a member of the house of Silmuna. Any dynastic claim they have is irrelevant, loyalty is what matters."
+ A45_traitor_wesdam_desc:0 "Despite being led by the Silmuna dynasty, Lenceiande betrayed Dameria in the Lilac Wars and fought with Lorent. The last duke of Dameria, Adénn Skylance was slain by a Erlan of Wesdam, a member of the house of Silmuna. Any dynastic claim they have is irrelevant, loyalty is what matters."
  A45_secure_west_dameshead_title:0 "Secure West Dameshead"
  A45_secure_west_dameshead_desc:0 "The West Dameshead has historically been a troublesome border with Lorent looking to take the land from Anbennar. As the emperor, it is our job to secure the West Dameshead."
  A45_historical_ally_title:0 "Moonhaven"
