--- a/localisation/Flavour_Pearlsedge_A11_l_english.yml
+++ b/localisation/Flavour_Pearlsedge_A11_l_english.yml
@@ -57,7 +57,7 @@
  A11_the_old_rivals_title:0 "The Old Rivals"
  A11_the_old_rivals_desc:0 "The Trísferian dynasty, and the House of Pearlman before them, have had two notable rivals throughout our history: the kings of Carneter and the mayors of Neckcliffe. With the fall of their protector, Dameria, we can finally conquer the remnants of these enemies. We shall consign the Kingdom of Carneter to the dustbin of history where it belongs and seize the city of Neckcliffe for ourselves."
  A11_wesdameric_ambitions_title:0 "Wesdameric Ambitions"
- A11_wesdameric_ambitions_desc:0 "Though they sided with us in the Lilac Wars, the rulers of Wesdam remain members of the House of Silmuna - particularly treacherous ones, at that. They will inevitably seek to restore Dameria and return us to subjugation! We must destroy them before they get the chance and consolidate our dominion over the Western Dameshead."
+ A11_wesdameric_ambitions_desc:0 "Though they sided with us in the Lilac Wars, the rulers of Lenceiande remain members of the House of Silmuna - particularly treacherous ones, at that. They will inevitably seek to restore Dameria and return us to subjugation! We must destroy them before they get the chance and consolidate our dominion over the Western Dameshead."
  A11_southern_pearls_title:0 "South Pearls"
  A11_southern_pearls_desc:0 "To our south, we have found yet another group of useful islands, as well as a nearby peninsula. It seems to have had very little native population before its discovery, and so could make for an excellent colony of ours - it is also quite close to the land of Taychend, an apparently wealthy land of warring kingdoms in need of some intervention by their betters."
  A11_dominate_taychend_title:0 "Dominate Taychend"
