--- a/localisation/Flavour_Rogieria_B37_l_english.yml
+++ b/localisation/Flavour_Rogieria_B37_l_english.yml
@@ -206,8 +206,8 @@ l_english:
  rogieria_new_escanni_title:0 "The New Escanni"
  rogieria_new_escanni_desc:0 "Escann was long defined by its unique cultures: from Castanorian (though it seems to share features with many others, such is only true because it was their foundation), to the unique chivalric traditions of the pre-Greentide nations. The adventurer states represented another instance of this pattern, as described thoroughly in work elsewhere.\n\n"Perhaps most notable were the developments of the 15th and 16th centuries, where a new race found its new identity – and nowhere more than in Rogieria."\n\n-The Half-Orcs, Chronicler Bramur of Anbenncóst, 1601, Konwell University Press."
 
- rogieria_matter_wesdam_title:0 "The Matter of Wesdam"
- rogieria_matter_wesdam_desc:0 "Wesdam betrayed the Silmunas at the Battle of the Moon Council, and in doing so, sealed our fate then – and their fate now. But what is that fate: is it to be a tool in the Shadowmoon Conspiracy, a weapon in our hand as we reclaim the legacy they helped sabotage? Or should we simply give them their just deserts, and make their name as poison in others' ears as it is in Rogieria?"
+ rogieria_matter_wesdam_title:0 "The Matter of Lenceiande"
+ rogieria_matter_wesdam_desc:0 "Lenceiande betrayed the Silmunas at the Battle of the Moon Council, and in doing so, sealed our fate then – and their fate now. But what is that fate: is it to be a tool in the Shadowmoon Conspiracy, a weapon in our hand as we reclaim the legacy they helped sabotage? Or should we simply give them their just deserts, and make their name as poison in others' ears as it is in Rogieria?"
 
  rogieria_great_power_title:0 "The Greater Power"
  rogieria_great_power_desc:0 "The nature of the Empire of Anbennar is that it concentrates power in a single figure, and expectations as well. We must make clear that [Root.Monarch.GetName] stands tall above the current emperor in every way that matters, and in doing so, we will take another step towards the Dove Throne."
@@ -352,7 +352,7 @@ l_english:
  flavor_rogieria.26.b:0 "No."
  
  flavor_rogieria.27.t:0 "Shadowmoon Conspiracy: [From.GetName] Leaves the Conspiracy" 
- flavor_rogieria.27.d:0 "The Silmuna have been wounded time and time again by traitors, and with the rise of Rogieria, we will have our due. [Root.GetName] was informed in dead of night by a clandestine messenger that [From.GetName] has decided to cut ties with the Shadowmoon Conspiracy, and in the aftermath, those old scars burn once more.\n\nThis treachery is not on the level of the Wesdamerian or Wexonard betrayals, of course, but it is disappointing that [From.Monarch.GetName] sees the failings of the current emperor – and who should rightfully sit that throne – and refuses to do anything about it.\n\nBut a pebble cannot stop a mighty river, and an army is not harmed by the loss of a single sword. The Shadowmoon Conspiracy remains strong, and our destiny remains laid out before us."
+ flavor_rogieria.27.d:0 "The Silmuna have been wounded time and time again by traitors, and with the rise of Rogieria, we will have our due. [Root.GetName] was informed in dead of night by a clandestine messenger that [From.GetName] has decided to cut ties with the Shadowmoon Conspiracy, and in the aftermath, those old scars burn once more.\n\nThis treachery is not on the level of the Lenceiander or Wexonard betrayals, of course, but it is disappointing that [From.Monarch.GetName] sees the failings of the current emperor – and who should rightfully sit that throne – and refuses to do anything about it.\n\nBut a pebble cannot stop a mighty river, and an army is not harmed by the loss of a single sword. The Shadowmoon Conspiracy remains strong, and our destiny remains laid out before us."
  flavor_rogieria.27.a:0 "Curses!"
  
  flavor_rogieria.28.t:0 "The Emperor's Return"
@@ -374,7 +374,7 @@ l_english:
  flavor_rogieria.31.a:0 "As long as Rogieria stands, the Young Owl will be remembered."
 
  flavor_rogieria.33.t:0 "A Damerian Wedding" 
- flavor_rogieria.33.d:0 "In many ways, the house of Silmuna has been split in two ever since Wesdam's betrayal at the end of the Lilac Wars.\n\nThe main branch was all but destroyed, the Grand Duchy dismantled, exiled to Escann and forced to carve out a new home in the aftermath of the Greentide, followed there by nobles and soldiers who would not forsake their liege.\n\nMeanwhile, the cadet branch of Wesdam retained their lands, and status within the empire, and the dismantling of the Grand Duchy gave them opportunity to expand their power further. However, loyalists regarded them as traitorous, illegitimate claimants to the Silmuna name.\n\nBut that was generations ago. Grudges cannot be held forever. Indeed, more recently we have reconciled with our kin, and there is an idea with growing popularity within our court.\n\nRogieria has a [B37.Monarch.GetTitle], Wesdam a [A04.Monarch.GetTitle]. What more opportune time could there be to bring this split to an end? We will reunite the branches, bind them together in marriage! It only remains to send the envoys, and make the proposal."
+ flavor_rogieria.33.d:0 "In many ways, the house of Silmuna has been split in two ever since Lenceiande's betrayal at the end of the Lilac Wars.\n\nThe main branch was all but destroyed, the Grand Duchy dismantled, exiled to Escann and forced to carve out a new home in the aftermath of the Greentide, followed there by nobles and soldiers who would not forsake their liege.\n\nMeanwhile, the cadet branch of Lenceiande retained their lands, and status within the empire, and the dismantling of the Grand Duchy gave them opportunity to expand their power further. However, loyalists regarded them as traitorous, illegitimate claimants to the Silmuna name.\n\nBut that was generations ago. Grudges cannot be held forever. Indeed, more recently we have reconciled with our kin, and there is an idea with growing popularity within our court.\n\nRogieria has a [B37.Monarch.GetTitle], Lenceiande a [A04.Monarch.GetTitle]. What more opportune time could there be to bring this split to an end? We will reunite the branches, bind them together in marriage! It only remains to send the envoys, and make the proposal."
  flavor_rogieria.33.a:0 "We are one house, Silmuna!"
  flavor_rogieria.33.b:0 "They are traitors, not members of our family."
 
@@ -461,7 +461,7 @@ l_english:
  rogieria_road_home_modifier:0 "The Road Home"
  rogieria_challenge_made_modifier:0 "The Challenge Made"
  rogieria_cry_freedom_modifier:0 "A Cry for Freedom"
- rogieria_wesdam_modifier:0 "Sabotaged Wesdam"
+ rogieria_wesdam_modifier:0 "Sabotaged Lenceiande"
  rogieria_emperor_modifier:0 "Sabotaged Emperor"
  
  ####################
