--- a/localisation/Flavour_Roilsard_A78_l_english.yml
+++ b/localisation/Flavour_Roilsard_A78_l_english.yml
@@ -84,7 +84,7 @@
  roilsard_reclaim_carnteria_title:0 "Imperial Carneteria"
  roilsard_reclaim_carnteria_desc:0 "Carneteria is considered part of the empire, but it lies outside the influence of the emperor, as the new defenders of the imperial border with Lorent it would be wise for us to restore this duchy to the Empire, strengthening our position in the empire and weakening Lorentish influence in the region."
  roilsard_western_march_title:0 "The Western March"
- roilsard_western_march_desc:0 "We have proven ourselves the real protectors of the western borders, having pushed the Lorentish out of the region entirely. The dukes of Wesdam however have proven themselves unworthy of the title, having betrayed even their own kin in the Lilac Wars and allowing the Lorentish into the empire unopposed. Perhaps it is time Wesdam lost the marquisate."
+ roilsard_western_march_desc:0 "We have proven ourselves the real protectors of the western borders, having pushed the Lorentish out of the region entirely. The dukes of Wesdam however have proven themselves unworthy of the title, having betrayed even their own kin in the Lilac Wars and allowing the Lorentish into the empire unopposed. Perhaps it is time Lenceiande lost the marquisate."
  roilsard_imperial_fleet_title:0 "Seize the Imperial Fleet"
  roilsard_imperial_fleet_desc:0 "As the new marquisate of the western borders it seems only logical that Roilsard would bring the people of the Dameshead into their realm, the woods of Woodwell and ports Neckcliffe would serve us well in building a great fleet to rival the Lorentish and, perhaps, to pursue our own interests in the region..."
  roilsard_control_elector_title:0 "Demand the Electorship"
