--- a/localisation/Flavour_Rubenaire_A18_l_english.yml
+++ b/localisation/Flavour_Rubenaire_A18_l_english.yml
@@ -50,7 +50,7 @@
  rubenaire_bring_down_the_west_damerian_counts_desc:0 "Woodwell and Neckcliffe are but the remains of what once were significant powers in the western Dameshead, they are the obvious next target if we are to consolidate the region."
 
  rubenaire_defeat_the_traitors_title:0 "Defeat the Traitors"
- rubenaire_defeat_the_traitors_desc:0 "The Silmunas that rule Wesdam are of a particularly traitorous kind, being key to the Lorentish victory in the Lilac Wars and responsible for the near extinction of their own dynasty. Let us at last take revenge and seize the remaining lands of the Silmuna."
+ rubenaire_defeat_the_traitors_desc:0 "The Silmunas that rule Lenceiande are of a particularly traitorous kind, being key to the Lorentish victory in the Lilac Wars and responsible for the near extinction of their own dynasty. Let us at last take revenge and seize the remaining lands of the Silmuna."
 
  rubenaire_raise_new_soldiers_title:0 "Raise the New Soldiers"
  rubenaire_raise_new_soldiers_desc:0 "Our armies have been left devastated after several decades of war, however we have no time to rest, the only way for us to stand up against Lorent is for us to quickly expand our country, and for that we will need more soldiers."
