--- a/localisation/anb_countries_l_english.yml
+++ b/localisation/anb_countries_l_english.yml
@@ -5,8 +5,8 @@
  A02_ADJ:0 "Derannic"
  A03:0 "Redglades"
  A03_ADJ:0 "Redglader"
- A04:0 "Wesdam"
- A04_ADJ:0 "Wesdamerian"
+ A04:0 "Lenceiande"
+ A04_ADJ:0 "Lenceiander"
  A05:0 "Reveria"
  A05_ADJ:0 "Reverian"
  A06:0 "Nimscodd"
