--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -7,7 +7,7 @@
  LOADING_TIP_5:0 "The Witch-Kings Era saw the rise of powerful magical monarchs, ruling Escann away from the prying eyes of the Magisterium."
  LOADING_TIP_6:0 "Firearms were invented by ancient dwarves in the Dwarovar, but gained popularity during the Greentide."
  LOADING_TIP_7:0 "Halflings love food."
- LOADING_TIP_8:0 "Wesdam is home to the last Silmunas in the Empire, though many do not see them as legitimate successors of the family they betrayed."
+ LOADING_TIP_8:0 "Lenceiande is home to the last Silmunas in the Empire, though many do not see them as legitimate successors of the family they betrayed."
  LOADING_TIP_9:0 "-cestir means "camp" in Elven."
  LOADING_TIP_10:0 "Núr means "new" in Elven."
  LOADING_TIP_11:0 "Arca means "castle" in Elven."
