--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -6088,13 +6088,13 @@ PROV_ADJ7999:0 "Earshorer"
 PROV_ADJ8000:0 "Tideharbor"
 
 # CoT New Folly Provinces
-PROV7991:0 "Swampsender"
-PROV7990:0 "Butchersfelder"
-PROV7989:0 "Slumper"
-PROV7988:0 "Crowsgraver"
-PROV7987:0 "Akaz Voruran"
-PROV7986:0 "Chattlepenser"
-PROV7985:0 "Fireblighter"
-PROV7984:0 "Fellmiran"
-PROV7983:0 "Deepmiran"
-PROV7982:0 "Muckwaller"
+PROV_ADJ7991:0 "Swampsender"
+PROV_ADJ7990:0 "Butchersfelder"
+PROV_ADJ7989:0 "Slumper"
+PROV_ADJ7988:0 "Crowsgraver"
+PROV_ADJ7987:0 "Akaz Voruran"
+PROV_ADJ7986:0 "Chattlepenser"
+PROV_ADJ7985:0 "Fireblighter"
+PROV_ADJ7984:0 "Fellmiran"
+PROV_ADJ7983:0 "Deepmiran"
+PROV_ADJ7982:0 "Muckwaller"
