--- a/localisation/Flavour_Wesdam_A04_l_english.yml
+++ b/localisation/Flavour_Wesdam_A04_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  
  flavor_wesdam.1.t:0 "Laurens' Choice"
- flavor_wesdam.1.d:0 "Laurens Silmuna was raised in the High Lorentish court of Madelaire by his mother, the Reánna II síl Madelaire. With Laurens coming of age as the rightful ruler of the Marquisate of Wesdam and Duchy of Madelaire, he has a choice:\n\nContinue the ways of his upbringing, fully embracing the high culture of his Lorentish neighbours...\n\n...or return to the roots of his Damerian ancestors."
+ flavor_wesdam.1.d:0 "Laurens Silmuna was raised in the High Lorentish court of Madelaire by his mother, the Reánna II síl Madelaire. With Laurens coming of age as the rightful ruler of the Marquisate of Lenceiande and Duchy of Madelaire, he has a choice:\n\nContinue the ways of his upbringing, fully embracing the high culture of his Lorentish neighbours...\n\n...or return to the roots of his Damerian ancestors."
  flavor_wesdam.1.a:0 "Remain High Lorentish."
  flavor_wesdam.1.b:0 "Embrace your West Damerian heritage."
  
@@ -19,8 +19,8 @@
  flavor_wesdam.4.d:0 "We must create a lavish event with our would-be partners if they are to ever think of our offer seriously!"
  flavor_wesdam.4.a:0 "Send them the invitation."
  
- flavor_wesdam.5.t:0 "Wesdamerian Invitation"
- flavor_wesdam.5.d:0 "The resurgent lord of Wesdam has invited us to a banquet. We know it is almost certain they will ask us about the possibility of forming union between our realms, and so we need to decide on our response."
+ flavor_wesdam.5.t:0 "Lenceiander Invitation"
+ flavor_wesdam.5.d:0 "The resurgent lord of Lenceiande has invited us to a banquet. We know it is almost certain they will ask us about the possibility of forming union between our realms, and so we need to decide on our response."
  flavor_wesdam.5.a:0 "Accept the union."
  flavor_wesdam.5.b:0 "Reject the union."
  
@@ -36,12 +36,12 @@
  flavor_wesdam.7.a:0 "They accepted!"
  flavor_wesdam.7.b:0 "They refused."
  
- flavor_wesdam.8.t:0 "Wesdamerian Overlordship"
- flavor_wesdam.8.d:0 "With our army ready and foothold established, we must send a missive to Anbenncóst at once to demand their servitude to Wesdam, lest thousands of innocent lives be lost."
+ flavor_wesdam.8.t:0 "Lenceiander Overlordship"
+ flavor_wesdam.8.d:0 "With our army ready and foothold established, we must send a missive to Anbenncóst at once to demand their servitude to Lenceiande, lest thousands of innocent lives be lost."
  flavor_wesdam.8.a:0 "Send the offer."
  
- flavor_wesdam.9.t:0 "Wesdamerian Proposition"
- flavor_wesdam.9.d:0 "The Marquisate of Wesdam has asked us for our annexation, claiming it to be their natural sovereign right as the true successor of Dameria.\nIt is true, that Anbenncóst had served as the seat of Damerian power, but the Grand Duchy is no more, and Anbenncóst is doing better than ever."
+ flavor_wesdam.9.t:0 "Lenceiander Proposition"
+ flavor_wesdam.9.d:0 "The Marquisate of Lenceiande has asked us for our annexation, claiming it to be their natural sovereign right as the true successor of Dameria.\nIt is true, that Anbenncóst had served as the seat of Damerian power, but the Grand Duchy is no more, and Anbenncóst is doing better than ever."
  flavor_wesdam.9.a:0 "Accept."
  flavor_wesdam.9.b:0 "Refuse."
  
@@ -50,27 +50,27 @@
  flavor_wesdam.10.a:0 "They accept, hurrah!"
  flavor_wesdam.10.b:0 "They refused, those damned cityfolk!"
  
- flavor_wesdam.11.t:0 "The Succession of Wesdam-Madelaire"
- flavor_wesdam.11.d:0 "The previous ruler saw fit to write his will with partition, granting the duchy of Wesdam to his first heir and the duchy of Madelarie to his second. While we could petition the emperor to content this will there are fears that Lorent may support the second heir's claim to Madelaire."
+ flavor_wesdam.11.t:0 "The Succession of Lenceiande-Madelaire"
+ flavor_wesdam.11.d:0 "The previous ruler saw fit to write his will with partition, granting the duchy of Lenceiande to his first heir and the duchy of Madelarie to his second. While we could petition the emperor to content this will there are fears that Lorent may support the second heir's claim to Madelaire."
  flavor_wesdam.11.a:0 "The will stands."
  flavor_wesdam.11.b:0 "We must petition the emperor to reverse this foolish mistake."
  
- flavor_wesdam.12.t:0 "The Succession of Wesdam-Madelaire"
- flavor_wesdam.12.d:0 "The previous ruler saw fit to write his will with parition, granting the duchy of Wesdam to his first heir and the duchy of Madelarie to his second. While we could petition the emperor to content this will there are fears that Lorent may support the second heir's claim to Madelaire."
+ flavor_wesdam.12.t:0 "The Succession of Lenceiande-Madelaire"
+ flavor_wesdam.12.d:0 "The previous ruler saw fit to write his will with parition, granting the duchy of Lenceiande to his first heir and the duchy of Madelarie to his second. While we could petition the emperor to content this will there are fears that Lorent may support the second heir's claim to Madelaire."
  flavor_wesdam.12.a:0 "The will must be honoured."
- flavor_wesdam.12.b:0 "Wesdam and Madelaire are inseperable."
+ flavor_wesdam.12.b:0 "Lenceiande and Madelaire are inseperable."
  
- wesdam_madelaire_union_remains_tt:0 "The union between Wesdam and Madelaire remains in place"
+ wesdam_madelaire_union_remains_tt:0 "The union between Lenceiande and Madelaire remains in place"
  lorent_may_enforce_split_tt:0 "Lorent may press the second heir's claim to Madelaire through war"
  
- flavor_wesdam.13.t:0 "The Succession of Wesdam-Madelaire"
- flavor_wesdam.13.d:0 "Word has reached us that [Emperor.GetName] and [A04.GetName] have conspired to prevent the proper inheritance of the duchy of Madelaire and keep the union between Madelaire and Wesdam. As the rightful liege of Madelaire we could support the claim of the neglected heir, securing their loyalty to the Lorentish King."
+ flavor_wesdam.13.t:0 "The Succession of Lenceiande-Madelaire"
+ flavor_wesdam.13.d:0 "Word has reached us that [Emperor.GetName] and [A04.GetName] have conspired to prevent the proper inheritance of the duchy of Madelaire and keep the union between Madelaire and Lenceiande. As the rightful liege of Madelaire we could support the claim of the neglected heir, securing their loyalty to the Lorentish King."
  flavor_wesdam.13.a:0 "We must right this wrong!"
  flavor_wesdam.13.b:0 "Imperial politics are of no concern to [Root.GetName]."
  
- incident_sucession_of_wesdam_madelaire:0 "The Sucession of Wesdam-Madelaire"
- incident_sucession_of_wesdam_madelaire_member_alert:0 "Wesdam petitioned the emperor to keep Madelaire."
- incident_sucession_of_wesdam_madelaire_emperor_alert:0 "Wesdam petitioned you to keep Madelaire."
+ incident_sucession_of_wesdam_madelaire:0 "The Sucession of Lenceiande-Madelaire"
+ incident_sucession_of_wesdam_madelaire_member_alert:0 "Lenceiande petitioned the emperor to keep Madelaire."
+ incident_sucession_of_wesdam_madelaire_emperor_alert:0 "Lenceiande petitioned you to keep Madelaire."
  
  A04_silmuna_education_title:0 "Silmuna Education"
  A04_silmuna_education_desc:0 "The rulers of the House of Silmuna have always been gifted at all aspects of rulership, and it is because of education that the Silmuna name shines."
@@ -81,7 +81,7 @@
  A04_lorentish_royal_marriage_title:0 "Lorentish Royal Marriage"
  A04_lorentish_royal_marriage_desc:0 "To reinforce our place in Lencenor we must intermarry with the existing nobility, ideally of High Lorentish stock, and if possible, one that descends from the House of Siloriel or its cadet branches such as the Rubenaires. After all, we already share our blood due to our Madelairey connections!"
  A04_lorentish_royal_visit_title:0 "Madelairey Ducal Visit"
- A04_lorentish_royal_visit_desc:0 "We must arrange a visit to the court of our ally in order to cement relations even further. A simple step to an otherwise grand plan of Wesdamerian dominion."
+ A04_lorentish_royal_visit_desc:0 "We must arrange a visit to the court of our ally in order to cement relations even further. A simple step to an otherwise grand plan of Lenceiander dominion."
  A04_the_gabelaire_declaration_title:0 "The Gabelaire Declaration"
  A04_the_gabelaire_declaration_desc:0 "In our blood flows the blood of Lorenan the Great, and through our marriages we solidified those ties. Let us use that to our advantage, and offer a union to our cousins in the name of Lencenor."
  A04_joint_military_exercice_title:0 "Joint Military Exercise"
@@ -100,7 +100,7 @@
  A04_upper_winebay_title:0 "Upper Winebay"
  A04_upper_winebay_desc:0 "The Upper Bay of Wines have nominally been loyal to the Lorentish royal demesne. Oldport remains as one of the pivotal ports that feed the pompous lords of Lorentainé their ever-loved wine."
  A04_bring_down_the_goliath_title:0 "Bring Down the Rose"
- A04_bring_down_the_goliath_desc:0 "Lorentainé's rose-gardens dominate every part of the city, filling the air with a pleasant scent. A Wesdamerian monarch sitting on Lorentainé's rose throne will no doubt legitimize our claims as rightful lords of Lencenor."
+ A04_bring_down_the_goliath_desc:0 "Lorentainé's rose-gardens dominate every part of the city, filling the air with a pleasant scent. A Lenceiander monarch sitting on Lorentainé's rose throne will no doubt legitimize our claims as rightful lords of Lencenor."
  
  A04_laurens_choice_title:0 "Laurens' Choice"
  A04_laurens_choice_desc:0 "Laurens Silmuna was born from the union of Cristof of Wesdam and the Duchess Reánna síl Madelaire. For much the Lilac Wars Laurens' father fought against his Damerian cousins and Laurens was raised in the lofty palaces and vinyards of Madelaire.\n\nNow that Laurens is a grown man in his own right, and ruler of both Wesdam and Madelaire, it is time for him to choose: will he follow his Damerian ancestry, or follow the Lorentish ways of his mother?"
@@ -111,7 +111,7 @@
  A04_secure_the_north_title:0 "Fishlords of Exwes"
  A04_secure_the_north_desc:0 "The nobles of Exwes have always been an outlier within the Grand Duchy. If we are to secure the Western Dameshead we must occupy our northern borders."
  A04_the_final_showdown_title:0 "Dominion of the West"
- A04_the_final_showdown_desc:0 "The Reaver-blooded dukes of Pealsedge have always been a rival to Wesdam and her ambitions. If we are to fully represent the western lords of Anbennar, and be the sole power in its western reaches, Pearlsedge must perish."
+ A04_the_final_showdown_desc:0 "The Reaver-blooded dukes of Pealsedge have always been a rival to Lenceiande and her ambitions. If we are to fully represent the western lords of Anbennar, and be the sole power in its western reaches, Pearlsedge must perish."
  A04_damerian_legacy_title:0 "Heart of Dameria"
  A04_damerian_legacy_desc:0 "Anbenncóst has naturally been under Damerian rule, and as the legitimate heirs of Dameria we have every right to extend our dominion over the traditional seat of Dameria."
  A04_eastern_winebay_title:0 "Eastern Winebay"
@@ -123,7 +123,7 @@
  A04_secure_our_trade_desc:0 "All trade in the world will pass through Anbenncóst one way or the other, and if we are to gain a fraction of its riches, we must make sure we are a major force in the mercantile sphere."
  A04_prepare_our_army_title:0 "Prepare Our Army"
  A04_prepare_our_army_desc:0 "Arrogant cityfolk, decadent magisters, foreign usurpers.\nThe Damesear is infested with such ilk, and the only way to reclaim our homeland is through force."
- A04_the_reclamation_title:0 "Wesdamerian Homecoming"
+ A04_the_reclamation_title:0 "Lenceiander Homecoming"
  A04_the_reclamation_desc:0 "It is undeniable that we have claims to the Isle of Damesear, and if they won't listen to that, they might reconsider when they see our guns."
  A04_damesear_landing_title:0 "Damesear Landing"
  A04_damesear_landing_desc:0 "The Isle of Damesear was where the original Damerian Kingdom rose, and it is where all future iterations of Dameria will rise. We must secure our homeland in order to revive the Grand Duchy."
@@ -134,9 +134,9 @@
  A04_wesdam_galley_fleet_desc:0 "To the east of our country lies the Dameshead Sea, the most profitable inland sea in the world. We must create a fleet capable of protecting our interests, and to enable our expansion across the Damesteeth to our homeland of Damesear."
  A04_sway_the_emporor_title:0 "Sway the Emperor"
  A04_sway_the_emporor_desc:0 "We do not sit on the Dove Throne yet, but our first step is to gain favour with the current emperor in order to legitimize our expansions within Anbennar. A few gold coins could do the trick."
- A04_damerian_royal_marriage_title:0 "Wesdamerian Royal Marriage"
+ A04_damerian_royal_marriage_title:0 "Lenceiander Royal Marriage"
  A04_damerian_royal_marriage_desc:0 "To solidify our position in the West Dameshead we must choose a potential ally and marry our dynasties. This ally must be strong but not strong enough, else they will not fall to our eventual goal of personal union."
- A04_damerian_royal_visit_title:0 "Wesdamerian Ducal Visit"
+ A04_damerian_royal_visit_title:0 "Lenceiander Ducal Visit"
  A04_damerian_royal_visit_desc:0 "We must arrange a visit to the court of our ally in order to cement relations even further. A simple step to an otherwise grand plan of Wesdamerian dominion."
  A04_offer_millenium_leadership_title:0 "Damerian Leadership"
  A04_offer_millenium_leadership_desc:0 "The lords of Western Dameshead have nominally served under the Grand Duchy of Dameria, but with Dameria's demise the mantle of leadership now falls to Wesdam. Let us offer our fellow Damerian cousins a chance to unify under our banner."
@@ -144,7 +144,7 @@
  A04_silmuna_diplomacy_desc:0 "The House of Silmuna has always relied on pen and words rather than might. We must continue this tradition and keep our friends close, and our enemies closer."
  
  wesdam_high_marriage:0 "High Marriage"
- is_wesdam_partner_tooltip:0 "Is §YWesdam Partner§!"
+ is_wesdam_partner_tooltip:0 "Is §Lenceiande Partner§!"
  wesdam_lorent_path_tooltip:0 "[Root.Monarch.GetName] has chosen the §YLorentish Path§!"
  wesdam_dameria_path_tooltip:0 "[Root.Monarch.GetName] has chosen the §YDamerian Path§!"
  laurens_lorentish_tooltip:0 "§GThis will unlock the Lorentish Path of our Mission Tree§!"
@@ -161,7 +161,7 @@
  wesdam_trade_secured:0 "Trade Secured"
  wesdam_damesear_ruler:0 "Damesear Ruler"
  wesdam_emperor_favour:0 "Emperor's Favour"
- wesdam_galley_fleet:0 "Wesdam Galley Fleet"
+ wesdam_galley_fleet:0 "Lenceiande Galley Fleet"
  
  A04_first_branch_mission_title:0 "[Root.GetSelectableMissionTitle]"
  A04_first_branch_mission_desc:0 "[Root.GetSelectableMissionDescription]"
