loc for nations
left out moreced adenner and castellyrian wips

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -1,1 +1,70 @@
 ﻿l_english:
+ #Cannorwake T1s
+ W00:0 "Kyrzzaar"
+ W00_ADJ:0 "Flamemarked"
+ W01:0 "Farrani Host"
+ W01_ADJ:0 "Farranean"
+ W02:0 "Moreced WIP"
+ W02_ADJ:0 "Moreceder"
+ W03:0 'Rohibon's Finest"
+ W03_ADJ:0 "Adenner"
+ W04:0 "Adenner WIP"
+ W04_ADJ:0 "Adenner"
+ W05:0 "Camdrean Company"
+ W05_ADJ:0 "Camdrean"
+ W06:0 "Humacsfeld"
+ W06_ADJ:0 "Felder"
+ W07:0 "Castonath"
+ W07_ADJ:0 "Castonathi"
+ W08:0 "Order of the Sapphire Eye"
+ W08_ADJ:0 "Sapphire"
+ W09:0 "Esswyck"
+ W09_ADJ:0 "Esswycker"
+ W10:0 "Castellyrian WIP"
+ W10_ADJ:0 "Castellyrian"
+ W11:0 "Order of the Moon Knights"
+ W11_ADJ:0 "Lunar"
+ W12:0 "Garioncost"
+ W12_ADJ:0 "Garioncoster"
+ 
+ #CoT Cannorwake Formables
+ W13:0 "Wesdam"
+ W13_ADJ:0 "Wesdamer"
+ W14:0 "Lencost"
+ W14_ADJ:0 "Lencosti"
+ W15:0 "Vinlor"
+ W15_ADJ:0 "Vinlori"
+ W16:0 "Rosenica"
+ W16_ADJ:0 "Rosebound"
+ W17:0 "Sottlan"
+ W17_ADJ:0 "Sottlani"
+ W18:0 "Nottlan"
+ W18_ADJ:0 "Nottlanic"
+ W19:0 "Drakksgard"
+ W19_ADJ:0 "Drakksan"
+ W20:0 "Esedor"
+ W20_ADJ:0 "Esedori"
+ W21:0 "Norinidor"
+ W21_ADJ:0 "Nornic"
+ W22:0 "The Reach"
+ W22_ADJ:0 "Reachman"
+ W23:0 "Exelaire"
+ W23_ADJ:0 "Exelaire"
+ W24:0 "Golden Dominion"
+ W24_ADJ:0 "Gilded"
+ W25:0 "Estonaire"
+ W25_ADJ:0 "Estonaire"
+ W26:0 "Estinipar"
+ W26_ADJ:0 "Estinipari"
+ W27:0 "High Damenaire"
+ W27_ADJ:0 "Damenairean"
+ W28:0 "Essdam"
+ W28_ADJ:0 "Essdamer"
+ W29:0 "Lionor"
+ W29_ADJ:0 "Lionic"
+ W30:0 "Arannor"
+ W30_ADJ:0 "Arannese"
+ W31:0 "Milcorissia"
+ W31_ADJ:0 "Milcori"
+ W32:0 "Eoridcois"
+ W32_ADJ:0 "Eorid"
