Damesear Nudge, Lencenor Areas vol.1

--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -416,9 +416,9 @@
  upper_winebay_area:0 "Upper Winebay"
  upper_winebay_area_name:0 "Upper Winebay"
  upper_winebay_area_adj:0 "Upper Winebayer"
- lower_winebay_area:0 "Lower Winebay"
- lower_winebay_area_name:0 "Lower Winebay"
- lower_winebay_area_adj:0 "Lower Winebayer"
+ lower_winebay_area:0 "Minara's Bosom"
+ lower_winebay_area_name:0 "Minara's Bosom"
+ lower_winebay_area_adj:0 "Minaraite"
  southroy_area:0 "Southroy"
  southroy_area_name:0 "Southroy"
  southroy_area_adj:0 "Southroyer"
