Lil loc update innit
Also fixing some trade node oopsies

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -6,7 +6,7 @@
  W01_ADJ:0 "Farranean"
  W02:0 "Moreced WIP"
  W02_ADJ:0 "Moreceder"
- W03:0 'Rohibon's Finest"
+ W03:0 "Rohibon's Finest"
  W03_ADJ:0 "Adenner"
  W04:0 "Adenner WIP"
  W04_ADJ:0 "Adenner"
