--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -68,3 +68,23 @@
  W31_ADJ:0 "Milcori"
  W32:0 "Eoridcois"
  W32_ADJ:0 "Eorid"
+ 
+ # Formable Decision Loc
+ sorncost_nation_title:0 "Reclaim the Sorncost Duchy"
+ vinlor_nation_title:0 "Become Lord of Vines"
+ rosenica_nation_title:0 "Unite Rosenica"
+ sottlan_nation_title:0 "Sottlan Forever"
+ nottlan_nation_title:0 "Nottlan Together"
+ drakksgard_nation_title:0 "Create Drakksgard"
+ esedor_nation_title:0 "A New Alenic Realm"
+ norinidor_nation_title:0 "Form Norinidor"
+ the_reach_nation_title:0 "Unify The Reach"
+ exelaire_nation_title:0 "Form Exelaire"
+ golden_dominion_nation_title:0 "Proclaim Golden Unity"
+ estonaire_nation_title:0 "Bind the Esmari Coast"
+ estinipar_nation_title:0 "Solidify Inner Esmaria"
+ high_damenaire_nation_title:0 "Proclaim High Damenaire"
+ essdam_nation_title:0 "Enthrone the Grand Duke of Essdam"
+ lionor_nation_title:0 "Claim the Lion Throne"
+ arannor_nation_title:0 "Create the Kingdom of Arannor"
+ milcorissia_nation_title:0 "Resurgence of the Milcori"
