--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -56,7 +56,7 @@
  W25_ADJ:0 "Estonaire"
  W26:0 "Estinipar"
  W26_ADJ:0 "Estinipari"
- W27:0 "High Damenaire"
+ W27:0 "Damenaire"
  W27_ADJ:0 "Damenairean"
  W28:0 "Essdam"
  W28_ADJ:0 "Essdamer"
