--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -32,10 +32,10 @@
  W13_ADJ:0 "Wesdamer"
  W14:0 "Lencost"
  W14_ADJ:0 "Lencosti"
- W15:0 "Vinlor"
- W15_ADJ:0 "Vinlori"
- W16:0 "Rosenica"
- W16_ADJ:0 "Rosebound"
+ W15:0 "Vinlorn"
+ W15_ADJ:0 "Vinlorni"
+ W16:0 "Rosica"
+ W16_ADJ:0 "Rosican"
  W17:0 "Sottlan"
  W17_ADJ:0 "Sottlani"
  W18:0 "Nottlan"
@@ -71,7 +71,7 @@
  
  # Formable Decision Loc
  sorncost_nation_title:0 "Reclaim the Sorncost Duchy"
- vinlor_nation_title:0 "Become Lord of Vines"
+ vinlorn_nation_title:0 "Unite the Winelods!"
  rosenica_nation_title:0 "Unite Rosenica"
  sottlan_nation_title:0 "Sottlan Forever"
  nottlan_nation_title:0 "Nottlan Together"
