--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -8,7 +8,7 @@
  PROV7:0 "Hardoaks"
  PROV8:0 "Anbenncóst"
  PROV9:0 "Moonisle"
- PROV10:0 "Wesdam"
+ PROV10:0 "Aleceria"
  PROV11:0 "Damesteeth"
  PROV12:0 "Greymill"
  PROV13:0 "Toothsend"
