--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2,46 +2,183 @@
  
  ##### LENCENOR #####
  
- A01_ideas:0 "Lorentish Ideas"
- A01_ideas_start:0 "Lorentish Traditions"
- A01_ideas_bonus:0 "Lorentish Ambition"
- A01_idea_1:0 "Lorentish Traditions"
- A01_idea_2:0 "Lorentish Ambition"
- A01_idea_3:0 "Lorentish Traditions"
- A01_idea_4:0 "Lorentish Ambition"
- A01_idea_5:0 "Lorentish Traditions"
- A01_idea_6:0 "Lorentish Ambition"
- A01_idea_7:0 "Lorentish Traditions" 
+ A01_ideas_3:0 "Lorentish Ideas 3"
+ A01_ideas_3_start:0 "Lorentish Traditions 3"
+ A01_ideas_3_bonus:0 "Lorentish Ambition 3"
 
- A02_ideas_1:0 "Lorentish Ideas 1"
- A02_ideas_1_start:0 "Lorentish Traditions 1"
- A02_ideas_1_bonus:0 "Lorentish Ambition 1"
- A02_idea_1_1:0 "Lorentish Traditions"
- A02_idea_2_1:0 "Lorentish Ambition"
- A02_idea_3_1:0 "Lorentish Traditions"
- A02_idea_4_1:0 "Lorentish Ambition"
- A02_idea_5_1:0 "Lorentish Traditions"
- A02_idea_6_1:0 "Lorentish Ambition"
- A02_idea_7_1:0 "Lorentish Traditions"
+ A01_idea_1_3:0 "Lorent 1"
+ A01_idea_1_3_desc:0 "Lorent 1 desc"
+ A01_idea_2_3:0 "Lorent 2"
+ A01_idea_2_3_desc:0 "Lorent 2 desc"
+ A01_idea_3_3:0 "Lorent 3"
+ A01_idea_3_3_desc:0 "Lorent 3 desc"
+ A01_idea_4_3:0 "Lorent 4"
+ A01_idea_4_3_desc:0 "Lorent 4 desc"
+ A01_idea_5_3:0 "Lorent 5"
+ A01_idea_5_3_desc:0 "Lorent 5 desc"
+ A01_idea_6_3:0 "Lorent 6"
+ A01_idea_6_3_desc:0 "Lorent 6 desc"
+ A01_idea_7_3:0 "Lorent 7"
+ A01_idea_7_3_desc:0 "Lorent 7 desc" 
 
- A02_ideas_2:0 "Lorentish Ideas 2"
- A02_ideas_2_start:0 "Lorentish Traditions 2"
- A02_ideas_2_bonus:0 "Lorentish Ambition 2"
- A02_idea_1_2:0 "Lorentish Traditions"
- A02_idea_2_2:0 "Lorentish Ambition"
- A02_idea_3_2:0 "Lorentish Traditions"
- A02_idea_4_2:0 "Lorentish Ambition"
- A02_idea_5_2:0 "Lorentish Traditions"
- A02_idea_6_2:0 "Lorentish Ambition"
- A02_idea_7_2:0 "Lorentish Traditions"
+ A02_ideas_1:0 "Deranne Ideas 1"
+ A02_ideas_1_start:0 "Deranne Traditions 1"
+ A02_ideas_1_bonus:0 "Deranne Ambition 1"
+ A02_idea_1_1:0 "Deranne 1"
+ A02_idea_1_1_desc:0 "Deranne 1 desc"
+ A02_idea_2_1:0 "Deranne 2"
+ A02_idea_2_1_desc:0 "Deranne 2 desc"
+ A02_idea_3_1:0 "Deranne 3"
+ A02_idea_3_1_desc:0 "Deranne 3 desc"
+ A02_idea_4_1:0 "Deranne 4"
+ A02_idea_4_1_desc:0 "Deranne 4 desc"
+ A02_idea_5_1:0 "Deranne 5"
+ A02_idea_5_1_desc:0 "Deranne 5 desc"
+ A02_idea_6_1:0 "Deranne 6"
+ A02_idea_6_1_desc:0 "Deranne 6 desc"
+ A02_idea_7_1:0 "Deranne 7"
+ A02_idea_7_1_desc:0 "Deranne 7 desc" 
 
- A02_ideas_3:0 "Lorentish Ideas 3"
- A02_ideas_3_start:0 "Lorentish Traditions 3"
- A02_ideas_3_bonus:0 "Lorentish Ambition 3"
- A02_idea_1_3:0 "Lorentish Traditions"
- A02_idea_2_3:0 "Lorentish Ambition"
- A02_idea_3_3:0 "Lorentish Traditions"
- A02_idea_4_3:0 "Lorentish Ambition"
- A02_idea_5_3:0 "Lorentish Traditions"
- A02_idea_6_3:0 "Lorentish Ambition"
- A02_idea_7_3:0 "Lorentish Traditions"
+ A02_ideas_2:0 "Deranne Ideas 2"
+ A02_ideas_2_start:0 "Deranne Traditions 2"
+ A02_ideas_2_bonus:0 "Deranne Ambition 2"
+ A02_idea_1_2:0 "Deranne 1"
+ A02_idea_1_2_desc:0 "Deranne 1 desc"
+ A02_idea_2_2:0 "Deranne 2"
+ A02_idea_2_2_desc:0 "Deranne 2 desc"
+ A02_idea_3_2:0 "Deranne 3"
+ A02_idea_3_2_desc:0 "Deranne 3 desc"
+ A02_idea_4_2:0 "Deranne 4"
+ A02_idea_4_2_desc:0 "Deranne 4 desc"
+ A02_idea_5_2:0 "Deranne 5"
+ A02_idea_5_2_desc:0 "Deranne 5 desc"
+ A02_idea_6_2:0 "Deranne 6"
+ A02_idea_6_2_desc:0 "Deranne 6 desc"
+ A02_idea_7_2:0 "Deranne 7"
+ A02_idea_7_2_desc:0 "Deranne 7 desc" 
+
+ A02_ideas_3:0 "Deranne Ideas 3"
+ A02_ideas_3_start:0 "Deranne Traditions 3"
+ A02_ideas_3_bonus:0 "Deranne Ambition 3"
+ A02_idea_1_3:0 "Deranne 1"
+ A02_idea_1_3_desc:0 "Deranne 1 desc"
+ A02_idea_2_3:0 "Deranne 2"
+ A02_idea_2_3_desc:0 "Deranne 2 desc"
+ A02_idea_3_3:0 "Deranne 3"
+ A02_idea_3_3_desc:0 "Deranne 3 desc"
+ A02_idea_4_3:0 "Deranne 4"
+ A02_idea_4_3_desc:0 "Deranne 4 desc"
+ A02_idea_5_3:0 "Deranne 5"
+ A02_idea_5_3_desc:0 "Deranne 5 desc"
+ A02_idea_6_3:0 "Deranne 6"
+ A02_idea_6_3_desc:0 "Deranne 6 desc"
+ A02_idea_7_3:0 "Deranne 7"
+ A02_idea_7_3_desc:0 "Deranne 7 desc" 
+
+ A09_ideas_1:0 "Sorncosti Ideas 1"
+ A09_ideas_1_start:0 "Sorncosti Traditions 1"
+ A09_ideas_1_bonus:0 "Sorncosti Ambition 1"
+ A09_idea_1_1:0 "Sorncosti 1"
+ A09_idea_1_1_desc:0 "Sorncosti 1 desc"
+ A09_idea_2_1:0 "Sorncosti 2"
+ A09_idea_2_1_desc:0 "Sorncosti 2 desc"
+ A09_idea_3_1:0 "Sorncosti 3"
+ A09_idea_3_1_desc:0 "Sorncosti 3 desc"
+ A09_idea_4_1:0 "Sorncosti 4"
+ A09_idea_4_1_desc:0 "Sorncosti 4 desc"
+ A09_idea_5_1:0 "Sorncosti 5"
+ A09_idea_5_1_desc:0 "Sorncosti 5 desc"
+ A09_idea_6_1:0 "Sorncosti 6"
+ A09_idea_6_1_desc:0 "Sorncosti 6 desc"
+ A09_idea_7_1:0 "Sorncosti 7"
+ A09_idea_7_1_desc:0 "Sorncosti 7 desc" 
+
+ A09_ideas_2:0 "Sorncosti Ideas 2"
+ A09_ideas_2_start:0 "Sorncosti Traditions 2"
+ A09_ideas_2_bonus:0 "Sorncosti Ambition 2"
+ A09_idea_1_2:0 "Sorncosti 1"
+ A09_idea_1_2_desc:0 "Sorncosti 1 desc"
+ A09_idea_2_2:0 "Sorncosti 2"
+ A09_idea_2_2_desc:0 "Sorncosti 2 desc"
+ A09_idea_3_2:0 "Sorncosti 3"
+ A09_idea_3_2_desc:0 "Sorncosti 3 desc"
+ A09_idea_4_2:0 "Sorncosti 4"
+ A09_idea_4_2_desc:0 "Sorncosti 4 desc"
+ A09_idea_5_2:0 "Sorncosti 5"
+ A09_idea_5_2_desc:0 "Sorncosti 5 desc"
+ A09_idea_6_2:0 "Sorncosti 6"
+ A09_idea_6_2_desc:0 "Sorncosti 6 desc"
+ A09_idea_7_2:0 "Sorncosti 7"
+ A09_idea_7_2_desc:0 "Sorncosti 7 desc" 
+
+ A09_ideas_3:0 "Sorncosti Ideas 3"
+ A09_ideas_3_start:0 "Sorncosti Traditions 3"
+ A09_ideas_3_bonus:0 "Sorncosti Ambition 3"
+ A09_idea_1_3:0 "Sorncosti 1"
+ A09_idea_1_3_desc:0 "Sorncosti 1 desc"
+ A09_idea_2_3:0 "Sorncosti 2"
+ A09_idea_2_3_desc:0 "Sorncosti 2 desc"
+ A09_idea_3_3:0 "Sorncosti 3"
+ A09_idea_3_3_desc:0 "Sorncosti 3 desc"
+ A09_idea_4_3:0 "Sorncosti 4"
+ A09_idea_4_3_desc:0 "Sorncosti 4 desc"
+ A09_idea_5_3:0 "Sorncosti 5"
+ A09_idea_5_3_desc:0 "Sorncosti 5 desc"
+ A09_idea_6_3:0 "Sorncosti 6"
+ A09_idea_6_3_desc:0 "Sorncosti 6 desc"
+ A09_idea_7_3:0 "Sorncosti 7"
+ A09_idea_7_3_desc:0 "Sorncosti 7 desc" 
+
+ A10_ideas_1:0 "Minara Temple Ideas 1"
+ A10_ideas_1_start:0 "Minara Temple Traditions 1"
+ A10_ideas_1_bonus:0 "Minara Temple Ambition 1"
+ A10_idea_1_1:0 "Minara Temple 1"
+ A10_idea_1_1_desc:0 "Minara Temple 1 desc"
+ A10_idea_2_1:0 "Minara Temple 2"
+ A10_idea_2_1_desc:0 "Minara Temple 2 desc"
+ A10_idea_3_1:0 "Minara Temple 3"
+ A10_idea_3_1_desc:0 "Minara Temple 3 desc"
+ A10_idea_4_1:0 "Minara Temple 4"
+ A10_idea_4_1_desc:0 "Minara Temple 4 desc"
+ A10_idea_5_1:0 "Minara Temple 5"
+ A10_idea_5_1_desc:0 "Minara Temple 5 desc"
+ A10_idea_6_1:0 "Minara Temple 6"
+ A10_idea_6_1_desc:0 "Minara Temple 6 desc"
+ A10_idea_7_1:0 "Minara Temple 7"
+ A10_idea_7_1_desc:0 "Minara Temple 7 desc" 
+
+ A10_ideas_2:0 "Minara Temple Ideas 2"
+ A10_ideas_2_start:0 "Minara Temple Traditions 2"
+ A10_ideas_2_bonus:0 "Minara Temple Ambition 2"
+ A10_idea_1_2:0 "Minara Temple 1"
+ A10_idea_1_2_desc:0 "Minara Temple 1 desc"
+ A10_idea_2_2:0 "Minara Temple 2"
+ A10_idea_2_2_desc:0 "Minara Temple 2 desc"
+ A10_idea_3_2:0 "Minara Temple 3"
+ A10_idea_3_2_desc:0 "Minara Temple 3 desc"
+ A10_idea_4_2:0 "Minara Temple 4"
+ A10_idea_4_2_desc:0 "Minara Temple 4 desc"
+ A10_idea_5_2:0 "Minara Temple 5"
+ A10_idea_5_2_desc:0 "Minara Temple 5 desc"
+ A10_idea_6_2:0 "Minara Temple 6"
+ A10_idea_6_2_desc:0 "Minara Temple 6 desc"
+ A10_idea_7_2:0 "Minara Temple 7"
+ A10_idea_7_2_desc:0 "Minara Temple 7 desc" 
+
+ A10_ideas_3:0 "Minara Temple Ideas 3"
+ A10_ideas_3_start:0 "Minara Temple Traditions 3"
+ A10_ideas_3_bonus:0 "Minara Temple Ambition 3"
+ A10_idea_1_3:0 "Minara Temple 1"
+ A10_idea_1_3_desc:0 "Minara Temple 1 desc"
+ A10_idea_2_3:0 "Minara Temple 2"
+ A10_idea_2_3_desc:0 "Minara Temple 2 desc"
+ A10_idea_3_3:0 "Minara Temple 3"
+ A10_idea_3_3_desc:0 "Minara Temple 3 desc"
+ A10_idea_4_3:0 "Minara Temple 4"
+ A10_idea_4_3_desc:0 "Minara Temple 4 desc"
+ A10_idea_5_3:0 "Minara Temple 5"
+ A10_idea_5_3_desc:0 "Minara Temple 5 desc"
+ A10_idea_6_3:0 "Minara Temple 6"
+ A10_idea_6_3_desc:0 "Minara Temple 6 desc"
+ A10_idea_7_3:0 "Minara Temple 7"
+ A10_idea_7_3_desc:0 "Minara Temple 7 desc" 
