--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -182,3 +182,57 @@
  A10_idea_6_3_desc:0 "Minara Temple 6 desc"
  A10_idea_7_3:0 "Minara Temple 7"
  A10_idea_7_3_desc:0 "Minara Temple 7 desc" 
+
+ A14_ideas_1:0 "Winelord Ideas 1"
+ A14_ideas_1_start:0 "Winelord Traditions 1"
+ A14_ideas_1_bonus:0 "Winelord Ambition 1"
+ A14_idea_1_1:0 "Winelord 1"
+ A14_idea_1_1_desc:0 "Winelord 1 desc"
+ A14_idea_2_1:0 "Winelord 2"
+ A14_idea_2_1_desc:0 "Winelord 2 desc"
+ A14_idea_3_1:0 "Winelord 3"
+ A14_idea_3_1_desc:0 "Winelord 3 desc"
+ A14_idea_4_1:0 "Winelord 4"
+ A14_idea_4_1_desc:0 "Winelord 4 desc"
+ A14_idea_5_1:0 "Winelord 5"
+ A14_idea_5_1_desc:0 "Winelord 5 desc"
+ A14_idea_6_1:0 "Winelord 6"
+ A14_idea_6_1_desc:0 "Winelord 6 desc"
+ A14_idea_7_1:0 "Winelord 7"
+ A14_idea_7_1_desc:0 "Winelord 7 desc" 
+
+ A14_ideas_2:0 "Winelord Ideas 2"
+ A14_ideas_2_start:0 "Winelord Traditions 2"
+ A14_ideas_2_bonus:0 "Winelord Ambition 2"
+ A14_idea_1_2:0 "Winelord 1"
+ A14_idea_1_2_desc:0 "Winelord 1 desc"
+ A14_idea_2_2:0 "Winelord 2"
+ A14_idea_2_2_desc:0 "Winelord 2 desc"
+ A14_idea_3_2:0 "Winelord 3"
+ A14_idea_3_2_desc:0 "Winelord 3 desc"
+ A14_idea_4_2:0 "Winelord 4"
+ A14_idea_4_2_desc:0 "Winelord 4 desc"
+ A14_idea_5_2:0 "Winelord 5"
+ A14_idea_5_2_desc:0 "Winelord 5 desc"
+ A14_idea_6_2:0 "Winelord 6"
+ A14_idea_6_2_desc:0 "Winelord 6 desc"
+ A14_idea_7_2:0 "Winelord 7"
+ A14_idea_7_2_desc:0 "Winelord 7 desc" 
+
+ A14_ideas_3:0 "Winelord Ideas 3"
+ A14_ideas_3_start:0 "Winelord Traditions 3"
+ A14_ideas_3_bonus:0 "Winelord Ambition 3"
+ A14_idea_1_3:0 "Winelord 1"
+ A14_idea_1_3_desc:0 "Winelord 1 desc"
+ A14_idea_2_3:0 "Winelord 2"
+ A14_idea_2_3_desc:0 "Winelord 2 desc"
+ A14_idea_3_3:0 "Winelord 3"
+ A14_idea_3_3_desc:0 "Winelord 3 desc"
+ A14_idea_4_3:0 "Winelord 4"
+ A14_idea_4_3_desc:0 "Winelord 4 desc"
+ A14_idea_5_3:0 "Winelord 5"
+ A14_idea_5_3_desc:0 "Winelord 5 desc"
+ A14_idea_6_3:0 "Winelord 6"
+ A14_idea_6_3_desc:0 "Winelord 6 desc"
+ A14_idea_7_3:0 "Winelord 7"
+ A14_idea_7_3_desc:0 "Winelord 7 desc" 
