Wineport ideas loc

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -236,3 +236,57 @@
  A14_idea_6_3_desc:0 "Winelord 6 desc"
  A14_idea_7_3:0 "Winelord 7"
  A14_idea_7_3_desc:0 "Winelord 7 desc" 
+
+ A16_ideas_1:0 "Wineport Ideas 1"
+ A16_ideas_1_start:0 "Wineport Traditions 1"
+ A16_ideas_1_bonus:0 "Wineport Ambition 1"
+ A16_idea_1_1:0 "Wineport 1"
+ A16_idea_1_1_desc:0 "Wineport 1 desc"
+ A16_idea_2_1:0 "Wineport 2"
+ A16_idea_2_1_desc:0 "Wineport 2 desc"
+ A16_idea_3_1:0 "Wineport 3"
+ A16_idea_3_1_desc:0 "Wineport 3 desc"
+ A16_idea_4_1:0 "Wineport 4"
+ A16_idea_4_1_desc:0 "Wineport 4 desc"
+ A16_idea_5_1:0 "Wineport 5"
+ A16_idea_5_1_desc:0 "Wineport 5 desc"
+ A16_idea_6_1:0 "Wineport 6"
+ A16_idea_6_1_desc:0 "Wineport 6 desc"
+ A16_idea_7_1:0 "Wineport 7"
+ A16_idea_7_1_desc:0 "Wineport 7 desc" 
+
+ A16_ideas_2:0 "Wineport Ideas 2"
+ A16_ideas_2_start:0 "Wineport Traditions 2"
+ A16_ideas_2_bonus:0 "Wineport Ambition 2"
+ A16_idea_1_2:0 "Wineport 1"
+ A16_idea_1_2_desc:0 "Wineport 1 desc"
+ A16_idea_2_2:0 "Wineport 2"
+ A16_idea_2_2_desc:0 "Wineport 2 desc"
+ A16_idea_3_2:0 "Wineport 3"
+ A16_idea_3_2_desc:0 "Wineport 3 desc"
+ A16_idea_4_2:0 "Wineport 4"
+ A16_idea_4_2_desc:0 "Wineport 4 desc"
+ A16_idea_5_2:0 "Wineport 5"
+ A16_idea_5_2_desc:0 "Wineport 5 desc"
+ A16_idea_6_2:0 "Wineport 6"
+ A16_idea_6_2_desc:0 "Wineport 6 desc"
+ A16_idea_7_2:0 "Wineport 7"
+ A16_idea_7_2_desc:0 "Wineport 7 desc" 
+
+ A16_ideas_3:0 "Wineport Ideas 3"
+ A16_ideas_3_start:0 "Wineport Traditions 3"
+ A16_ideas_3_bonus:0 "Wineport Ambition 3"
+ A16_idea_1_3:0 "Wineport 1"
+ A16_idea_1_3_desc:0 "Wineport 1 desc"
+ A16_idea_2_3:0 "Wineport 2"
+ A16_idea_2_3_desc:0 "Wineport 2 desc"
+ A16_idea_3_3:0 "Wineport 3"
+ A16_idea_3_3_desc:0 "Wineport 3 desc"
+ A16_idea_4_3:0 "Wineport 4"
+ A16_idea_4_3_desc:0 "Wineport 4 desc"
+ A16_idea_5_3:0 "Wineport 5"
+ A16_idea_5_3_desc:0 "Wineport 5 desc"
+ A16_idea_6_3:0 "Wineport 6"
+ A16_idea_6_3_desc:0 "Wineport 6 desc"
+ A16_idea_7_3:0 "Wineport 7"
+ A16_idea_7_3_desc:0 "Wineport 7 desc" 
