CoT Generic Mission fix pt1

--- a/localisation/CoT_Generic_mission_modifiers_l_english.yml
+++ b/localisation/CoT_Generic_mission_modifiers_l_english.yml
@@ -1,4 +1,4 @@
-l_english: 
+﻿l_english: 
  cot_seat_of_power_1:0 "Seat of Power"
  cot_seat_of_power_2:0 "Seat of Power"
  cot_seat_of_power_3:0 "Seat of Power"
