Don't tell Vaass
Wex MT import

--- a/localisation/anb_areas_l_english.yml
+++ b/localisation/anb_areas_l_english.yml
@@ -4316,3 +4316,8 @@ theslump_area_adj:0 "Mirelurker"
 lower_dreadmire_area:0 "Lower Dreadmire"
 lower_dreadmire_area_name:0 "Lower Dreadmire"
 lower_dreadmire_area_adj:0 "Mirelurker"
+
+# CoT Map Adjust
+embergarden_area:0 "Embergarden"
+embergarden_area_name:0 "Embergarden"
+embergarden_area_adj:0 "Embergarden"
