--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -290,3 +290,57 @@
  A16_idea_6_3_desc:0 "Wineport 6 desc"
  A16_idea_7_3:0 "Wineport 7"
  A16_idea_7_3_desc:0 "Wineport 7 desc" 
+
+ A17_ideas_1:0 "High Lorentish Ideas 1"
+ A17_ideas_1_start:0 "High Lorentish Traditions 1"
+ A17_ideas_1_bonus:0 "High Lorentish Ambition 1"
+ A17_idea_1_1:0 "High Lorentish 1"
+ A17_idea_1_1_desc:0 "High Lorentish 1 desc"
+ A17_idea_2_1:0 "High Lorentish 2"
+ A17_idea_2_1_desc:0 "High Lorentish 2 desc"
+ A17_idea_3_1:0 "High Lorentish 3"
+ A17_idea_3_1_desc:0 "High Lorentish 3 desc"
+ A17_idea_4_1:0 "High Lorentish 4"
+ A17_idea_4_1_desc:0 "High Lorentish 4 desc"
+ A17_idea_5_1:0 "High Lorentish 5"
+ A17_idea_5_1_desc:0 "High Lorentish 5 desc"
+ A17_idea_6_1:0 "High Lorentish 6"
+ A17_idea_6_1_desc:0 "High Lorentish 6 desc"
+ A17_idea_7_1:0 "High Lorentish 7"
+ A17_idea_7_1_desc:0 "High Lorentish 7 desc" 
+
+ A17_ideas_2:0 "High Lorentish Ideas 2"
+ A17_ideas_2_start:0 "High Lorentish Traditions 2"
+ A17_ideas_2_bonus:0 "High Lorentish Ambition 2"
+ A17_idea_1_2:0 "High Lorentish 1"
+ A17_idea_1_2_desc:0 "High Lorentish 1 desc"
+ A17_idea_2_2:0 "High Lorentish 2"
+ A17_idea_2_2_desc:0 "High Lorentish 2 desc"
+ A17_idea_3_2:0 "High Lorentish 3"
+ A17_idea_3_2_desc:0 "High Lorentish 3 desc"
+ A17_idea_4_2:0 "High Lorentish 4"
+ A17_idea_4_2_desc:0 "High Lorentish 4 desc"
+ A17_idea_5_2:0 "High Lorentish 5"
+ A17_idea_5_2_desc:0 "High Lorentish 5 desc"
+ A17_idea_6_2:0 "High Lorentish 6"
+ A17_idea_6_2_desc:0 "High Lorentish 6 desc"
+ A17_idea_7_2:0 "High Lorentish 7"
+ A17_idea_7_2_desc:0 "High Lorentish 7 desc" 
+
+ A17_ideas_3:0 "High Lorentish Ideas 3"
+ A17_ideas_3_start:0 "High Lorentish Traditions 3"
+ A17_ideas_3_bonus:0 "High Lorentish Ambition 3"
+ A17_idea_1_3:0 "High Lorentish 1"
+ A17_idea_1_3_desc:0 "High Lorentish 1 desc"
+ A17_idea_2_3:0 "High Lorentish 2"
+ A17_idea_2_3_desc:0 "High Lorentish 2 desc"
+ A17_idea_3_3:0 "High Lorentish 3"
+ A17_idea_3_3_desc:0 "High Lorentish 3 desc"
+ A17_idea_4_3:0 "High Lorentish 4"
+ A17_idea_4_3_desc:0 "High Lorentish 4 desc"
+ A17_idea_5_3:0 "High Lorentish 5"
+ A17_idea_5_3_desc:0 "High Lorentish 5 desc"
+ A17_idea_6_3:0 "High Lorentish 6"
+ A17_idea_6_3_desc:0 "High Lorentish 6 desc"
+ A17_idea_7_3:0 "High Lorentish 7"
+ A17_idea_7_3_desc:0 "High Lorentish 7 desc" 
